--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>b2bit - Login</title>
+    <base href="/b2bit" />
   </head>
   <body>
     <div id="root"></div>
